feat: Chronology item with Proof array
