# src/swagger/proofItem/updateSw.yaml
@@ -1,17 +1,17 @@
 
 paths:
-  /chronology/{id}:
+  /proof/{id}:
     patch:
       tags:
-        - Chronology
-      summary: Update chronology
+        - Proof
+      summary: Update proofItem
       consumes:
         - application/json
       parameters:
         - name: id
           in: path
           required: true
-          description: chronology id
+          description: proofItem id
           schema:
             type: number
       requestBody:
@@ -20,16 +20,19 @@ paths:
             schema:
               type: object
               properties:
-                age:
+                chronology_id:
+                  type: number
+                file_src:
                   type: string
-                period:
+                reference:
                   type: string
-                  description: 연도
+                  description: 상세정보 링크
                 content:
                   type: string
-                  description: 내용
+                  description: 본문 내용
                 is_visible:
                   type: boolean
+                  description: 공개 여부
       responses:
         200:
           description: "OK"
@@ -45,24 +48,25 @@ paths:
                   msg:
                     type: string
                     description: 메시지
-                    example: chronology 수정에 성공했습니다.
+                    example: proofItem 수정에 성공했습니다.
                   item:
                     type: object
                     properties:
                       id:
                         type: number
-                      age:
+                      chronology_id:
+                        type: number
+                      file_src:
                         type: string
-                      period:
+                      reference:
                         type: string
-                        description: 연도
+                        description: 상세정보 링크
                       content:
                         type: string
-                        description: 내용
+                        description: 본문 내용
                       is_visible:
                         type: boolean
-                      proof_items:
-                        type: array
+                        description: 공개 여부
                       updated_at:
                         type: string
                         format: date
